fix menu items alignment

--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -88,3 +88,8 @@
     }
   }
 }
+
+.navigation {
+  text-align: left;
+  display: inline-block;
+}
